[package]
name = "actix-type-util"
version = "0.1.0"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
license = "Apache-2.0 OR MIT"
readme = "./README.md"
repository = "https://github.com/TobiasDeBruijn/actix-type-util"
categories = ["web-programming::http-server"]
keywords = ["actix", "type", "util"]

[dependencies]
actix-web = { version = "4.9.0", default-features = false, features = ["cookies"] }
